# nato

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  web.yml
crates/nato/: Cargo.toml
crates/nato-cli/: Cargo.toml
crates/nato-cli/src/: main.rs
crates/nato-flutter/: Cargo.toml
crates/nato-flutter/src/: api.rs  frb_generated.rs
crates/nato-wasm/: Cargo.toml
crates/nato-wasm/src/: lib.rs
crates/nato/src/: lib.rs
flutter/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/android/app/src/main/: AndroidManifest.xml
flutter/integration_test/: simple_test.dart
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/rust_builder/: pubspec.yaml
flutter/rust_builder/android/: build.gradle  settings.gradle
flutter/rust_builder/ios/: nato-flutter.podspec
flutter/rust_builder/linux/: CMakeLists.txt
flutter/rust_builder/macos/: nato-flutter.podspec
flutter/rust_builder/windows/: CMakeLists.txt
flutter/test/: widget_test.dart
web/: Caddyfile  Dockerfile  README.md  docker-compose.yml  package.json  svelte.config.js
web/src/lib/: format.ts  history.ts  nato.ts
web/src/routes/: +layout.ts  +page.svelte
(+2 files in other folders)
