[package]
name = "nato-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the nato phonetic alphabet library"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nato = { path = "../nato" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
